fixed hover info not showing

--- a/css/sass/co2ok.scss
+++ b/css/sass/co2ok.scss
@@ -125,6 +125,9 @@
              .inner_checkbox_label {
                @extend %gradient;
              }
+             .co2ok_payoff{
+               margin-bottom: 400px;
+             }
              color:white;
              text-shadow: 2px 2px 8px #6d6d6d;
              box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
